# garrus

./: .bandit  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
garrus/: test.py
garrus/calibrations/: __init__.py
garrus/calibrations/scaling/: __init__.py  platt.py
garrus/core/: __init__.py  calibration.py  metric.py  visualization.py
garrus/metrics/: __init__.py  aupre.py  aurc.py  brier.py  eaurc.py  ece.py  fpr_n_tpr.py  nll.py  utils.py
garrus/visualizations/: __init__.py  confidence_histogram.py  reliability_diagram.py
tests/: test_garrus.py
