[tool.poetry]
name = "garrus"
version = "0.2.2"
description = ""
authors = ["sleep3r <sleep3r@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.2"
torch = "^1.8.1"
sklearn = "^0.0"
plotly = "^4.14.3"
flake8 = "^3.9.0"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
