[tool.poetry]
name = "garrus"
version = "0.3.0"
description = "A Python package for machine learning and data visualization"
authors = ["sleep3r <sleep3r@icloud.com>"]
readme = "README.md"
homepage = "https://github.com/sleep3r/garrus"
repository = "https://github.com/sleep3r/garrus"
license = "MIT"
keywords = ["machine-learning", "data-visualization", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
torch = "^2.5.1"
scikit-learn = "^1.6.0"
plotly = "^5.24.0"
tqdm = "^4.66.5"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
